updates to manuscript

--- a/branches/dTWA+BBGKY/Makefile
+++ b/branches/dTWA+BBGKY/Makefile
@@ -2,5 +2,5 @@ NAME=dTWA+BBGKY
 USE_PDFLATEX=true
 VIEWPDF=okular
 CONVERT=true
-CLEAN_FILES+=dTWA+BBGKYNotes.bib
+CLEAN_FILES+=dTWA+BBGKYNotes.bib dTWA+BBGKY.upb
 include /usr/share/latex-mk/latex.gmk
