added Chimera paper to trunk

--- a/trunk/Makefile
+++ b/trunk/Makefile
@@ -1,6 +1,7 @@
-NAME=conference_ext_abstract
+NAME=chimera_disorder_free
 USE_PDFLATEX=true
 VIEWPDF=evince
 CONVERT=true
-CLEAN_FILES+=conference_ext_abstract.aux conference_ext_abstract.synctex.gz
+CLEAN_FILES+=chimera_disorder_free.synctex.gz chimera_disorder_freeNotes.bib
+EXTRA_DIST+=clean_J_strong_MzAB_betas.pdf drive_distribution.pdf entangEntrp.pdf pic_regions.jpg quasienergy_8.pdf robustness_N_8.pdf sz_t_strongweakJ_ea_N_8.pdf sz_t_weakJ_N_8.jpeg chimera.bib chimera_disorder_free.bbl Makefile
 include /usr/share/latex-mk/latex.gmk
